--- a/src/components/SplashModal.css
+++ b/src/components/SplashModal.css
@@ -11,11 +11,13 @@
   }
   
   .modal-content {
-    background: rgba(255, 255, 255, 1);
+    background: rgb(255, 255, 255);
+    --bs-modal-border-width: 3px;
+    --bs-modal-border-color: black;
     --bs-modal-bg: rgb(209, 216, 209);
-    padding: 20px;
+    padding: 30px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    max-width: 40%;
+    max-width: 35%;
     max-height: 80%;
     overflow-y: auto;
     text-align: center; 
@@ -53,4 +55,11 @@
   .order-options {
     display: flex;
     justify-content: space-between;
+    margin-top:50px;
+  }
+
+  @media only screen and (max-width: 768px) {
+    .modal-overlay {
+      display: none;
+    }
   }
